// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generatePythonClient > matches the filtered snapshot 1`] = `
"# Generated by apix - Petstore v1.0.0
# 5 endpoints, 4 schemas
#
# Usage:
#   client = Client(base_url="https://api.petstore.test")
#   result = client.some_operation()

from __future__ import annotations

import time
from typing import Any, Literal, Optional, TypeAlias, TypedDict, cast

import requests

# Types

"""A pet in the catalog"""
class PetRequired(TypedDict):
    # Stable ID
    id: int
    name: str

class Pet(PetRequired, total=False):
    status: Literal["available", "pending"]

class NewPet(Pet, total=False):
    nickname: Optional[str]

class StatusEnvelopeRequired(TypedDict):
    state: Status

class StatusEnvelope(StatusEnvelopeRequired, total=False):
    metadata: dict[str, str]

Status: TypeAlias = Literal["ready", "warming"]

class ApiError(Exception):
    def __init__(self, message: str, status: int, body: Any) -> None:
        super().__init__(message)
        self.status = status
        self.body = body


class Client:
    def __init__(self, base_url: str = "https://api.petstore.test", api_key: Optional[str] = None) -> None:
        self.base_url = base_url.rstrip('/')
        self.headers: dict[str, str] = {'Content-Type': 'application/json'}
        if api_key:
            self.headers['Authorization'] = f'Bearer {api_key}'

    def _request(self, method: str, path: str, *, params: Optional[dict[str, Any]] = None, json_body: Any = None) -> Any:
        url = f"{self.base_url}{path}"
        cleaned_params = {key: value for key, value in (params or {}).items() if value is not None}
        last_error: Optional[ApiError] = None

        for attempt in range(3):
            if attempt > 0:
                time.sleep(0.5 * (2 ** attempt))

            response = requests.request(method, url, headers=dict(self.headers), params=cleaned_params or None, json=json_body, timeout=30)

            if response.status_code == 429 or response.status_code >= 500:
                body = self._decode_body(response)
                last_error = ApiError(f"HTTP {response.status_code}", response.status_code, body)
                continue

            if not response.ok:
                body = self._decode_body(response)
                raise ApiError(f"HTTP {response.status_code}: {body}", response.status_code, body)

            if response.status_code == 204:
                return None

            if not response.content:
                return None

            return self._decode_body(response)

        raise last_error or ApiError('Request failed', 0, None)

    @staticmethod
    def _decode_body(response: requests.Response) -> Any:
        try:
            return response.json()
        except ValueError:
            return response.text

    def get_status(self) -> StatusEnvelope:
        """GET /status"""
        return cast(StatusEnvelope, self._request("GET", "/status"))
"
`;

exports[`generatePythonClient > matches the full client snapshot 1`] = `
"# Generated by apix - Petstore v1.0.0
# 5 endpoints, 4 schemas
#
# Usage:
#   client = Client(base_url="https://api.petstore.test")
#   result = client.some_operation()

from __future__ import annotations

import time
from typing import Any, Literal, Optional, TypeAlias, TypedDict, cast

import requests

# Types

"""A pet in the catalog"""
class PetRequired(TypedDict):
    # Stable ID
    id: int
    name: str

class Pet(PetRequired, total=False):
    status: Literal["available", "pending"]

class NewPet(Pet, total=False):
    nickname: Optional[str]

class StatusEnvelopeRequired(TypedDict):
    state: Status

class StatusEnvelope(StatusEnvelopeRequired, total=False):
    metadata: dict[str, str]

Status: TypeAlias = Literal["ready", "warming"]

class ApiError(Exception):
    def __init__(self, message: str, status: int, body: Any) -> None:
        super().__init__(message)
        self.status = status
        self.body = body


class Client:
    def __init__(self, base_url: str = "https://api.petstore.test", api_key: Optional[str] = None) -> None:
        self.base_url = base_url.rstrip('/')
        self.headers: dict[str, str] = {'Content-Type': 'application/json'}
        if api_key:
            self.headers['Authorization'] = f'Bearer {api_key}'

    def _request(self, method: str, path: str, *, params: Optional[dict[str, Any]] = None, json_body: Any = None) -> Any:
        url = f"{self.base_url}{path}"
        cleaned_params = {key: value for key, value in (params or {}).items() if value is not None}
        last_error: Optional[ApiError] = None

        for attempt in range(3):
            if attempt > 0:
                time.sleep(0.5 * (2 ** attempt))

            response = requests.request(method, url, headers=dict(self.headers), params=cleaned_params or None, json=json_body, timeout=30)

            if response.status_code == 429 or response.status_code >= 500:
                body = self._decode_body(response)
                last_error = ApiError(f"HTTP {response.status_code}", response.status_code, body)
                continue

            if not response.ok:
                body = self._decode_body(response)
                raise ApiError(f"HTTP {response.status_code}: {body}", response.status_code, body)

            if response.status_code == 204:
                return None

            if not response.content:
                return None

            return self._decode_body(response)

        raise last_error or ApiError('Request failed', 0, None)

    @staticmethod
    def _decode_body(response: requests.Response) -> Any:
        try:
            return response.json()
        except ValueError:
            return response.text

    def list_pets(self, cursor: str, limit: Optional[int] = None) -> list[Pet]:
        """GET /pets"""
        params = { "limit": limit, "cursor": cursor }
        return cast(list[Pet], self._request("GET", "/pets", params=params))

    def create_pet(self, body: NewPet) -> Pet:
        """POST /pets"""
        return cast(Pet, self._request("POST", "/pets", json_body=body))

    def get_pet(self, pet_id: str) -> Pet:
        """GET /pets/{petId}"""
        return cast(Pet, self._request("GET", f"/pets/{pet_id}"))

    def delete_pet(self, pet_id: str) -> None:
        """DELETE /pets/{petId}"""
        self._request("DELETE", f"/pets/{pet_id}")
        return None

    def get_status(self) -> StatusEnvelope:
        """GET /status"""
        return cast(StatusEnvelope, self._request("GET", "/status"))
"
`;
